--- a/src/view/SearchView.css
+++ b/src/view/SearchView.css
@@ -83,6 +83,8 @@ ul.filter-buttons li {
 
     .search-box .mobile-clear-filters {
         display: flex;
+        background-color: var(--nlblue);
+        color: white;
     }
 
     .search-box .mobile-filter-toggle .toggle-icon {
