--- a/src/view/charts/MapChart.css
+++ b/src/view/charts/MapChart.css
@@ -15,8 +15,6 @@
   flex-grow: 1;
   text-align: center;
   height: 100%;
-  max-height: 100%;
-  overflow: hidden;
 }
 
 .map-chart-image-wrap {
